@@ -963,6 +963,11 @@
         name = "Miguel Zapico (elricz)"
     [/entry]
     [entry]
+        name = "Nathan Partlan (Greywhind)"
+        email = "greywhind_AT_users.sourceforge.net"
+        wikiuser = "Greywhind"
+    [/entry]
+    [entry]
         name = "Pablo J. Urbano Santos (Lord Ork)"
         wikiuser = "Lord Ork"
         email = "asqueados_AT_gmail.com"
